# Interpretator

./: ALGORITHM.txt  ALU.cpp  ALU.h  CMakeLists.txt  Lexem.cpp  Lexem.h  Lexem_Queue_asm.cpp  Lexem_Queue_asm.h  MATH.txt  README.md  call_stack.h  code_segment.cpp  code_segment.h  cos.txt  handlers.cpp  handlers.h  interpret.cpp  interpret.sln  interpret.vcxproj  j_error.cpp  j_error.h  preprocess.cpp  preprocess.h  processor.cpp  processor.h  rpn.cpp  rpn.h  string_process.cpp  string_process.h  test.txt  Интерпретатор.pptx  Отчет_Золкин_3823Б1ПМ1.docx
.github/workflows/: main.yml
MATH/: MATRIX.txt
include/: ALU.h  Lexem.h  Lexem_Queue_asm.h  call_stack.h  code_segment.h  handlers.h  preprocess.h  processor.h  rpn.h  string_process.h
samples/: CMakeLists.txt  interpret.cpp
samples/include/ALGORITHM/: RADIX_SORT.txt  REINTERPRET_CAST.txt
samples/include/MATH/: ERATOSPHEN.txt  MATH_CONSTANT.txt  SIN.txt  VECTOR.txt  binpow.txt
src/: ALU.cpp  Lexem.cpp  Lexem_Queue_asm.cpp  call_stack.cpp  code_segment.cpp  handlers.cpp  preprocess.cpp  processor.cpp  rpn.cpp  string_process.cpp
